[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Tilesets/tileset porta 128px.png" type="Texture" id=1]
[ext_resource path="res://Scripts/SecretRoomDoor.gd" type="Script" id=2]
[ext_resource path="res://Fonts/NerkoOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Audio/Sound_Effects/Buzz.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/Sound_Effects/DoorUnlocked.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 126.252, 47.4441 )

[sub_resource type="CircleShape2D" id=2]
radius = 332.156

[sub_resource type="DynamicFont" id=3]
size = 72
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 18.7734, 88.1968 )

[node name="SecretRoomDoor" type="KinematicBody2D"]
position = Vector2( 1791.65, 3103.05 )
script = ExtResource( 2 )
sequence = [ "C", "A#", "C", "D#" ]

[node name="Sprite" type="Sprite" parent="."]
visible = false
z_index = 2
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 1, 0, 255, 127 )

[node name="OpenSprite" type="Sprite" parent="."]
z_index = 2
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 2, 129, 255, 127 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 54 )
shape = SubResource( 1 )

[node name="Play_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Play_Area"]
shape = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
margin_left = 141.0
margin_top = -154.0
margin_right = 452.0
margin_bottom = 143.0
color = Color( 0.505882, 0.0313726, 0.0313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GuideText" type="RichTextLabel" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0.827451, 0.592157, 0.317647, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "GUIDE PARAM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="DoorUnlocked" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="Buzz" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="LeftSide" type="CollisionShape2D" parent="."]
position = Vector2( -107.481, 28.2844 )
shape = SubResource( 4 )
disabled = true

[node name="RightSide" type="CollisionShape2D" parent="."]
position = Vector2( 104.652, 28.9912 )
shape = SubResource( 4 )
disabled = true
[connection signal="body_entered" from="Play_Area" to="." method="_on_Play_Area_body_entered"]
[connection signal="body_exited" from="Play_Area" to="." method="_on_Play_Area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
